discussion/kv_engine/160234/160234_rev5_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-48182: Make couchstore midpoint rollback optimisation optional

We need to disable it for Nexus but it's unclear if it will
negatively affect any tests. Make it configurable.

Change-Id: If7deca05c7eac83dc17bc1a4f7f95bae5ce54cf6

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2021-09-08 15:24:59.000000000
Message: 
Uploaded patch set 5: Patch Set 4 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-09-08 15:54:05.000000000
Message: 
Patch Set 5: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/39551/ : FAILURE

Compile error at c:\jenkins\workspace\kv_engine-windows-master\kv_engine\engines\ep\tests\module_tests\evp_store_single_threaded_test.h(549): error C2027: use of undefined type "SynchronousEPEngine" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/39551/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12106/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/evp_store_single_threaded_test.h:549:22: error: member access into incomplete type "SynchronousEPEngine" [clang-diagnostic-error]
        return engine->getConfiguration().getBackend() == "nexus" &&
                     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/mock/mock_synchronous_ep_engine_fwd.h:16:7: note: forward declaration of "SynchronousEPEngine"
class SynchronousEPEngine;
      ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12106/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/evp_store_single_threaded_test.h:549:22:
error: member access into incomplete type "SynchronousEPEngine" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12106/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/21926/ : FAILURE

Compile error at [2021-09-08T15:51:23.799Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_single_threaded_test.h:549:22:
error: member access into incomplete type "SynchronousEPEngine"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/21926/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/1768/ : FAILURE

Compile error at [2021-09-08T15:44:33.284Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_single_threaded_test.h:549:22:
error: invalid use of incomplete type ?class SynchronousEPEngine?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/1768/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/1749/ : FAILURE

Compile error at [2021-09-08T15:43:35.494Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_single_threaded_test.h:549:22:
error: member access into incomplete type "SynchronousEPEngine"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/1749/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/12865/ : FAILURE

Compile error at [2021-09-08T15:36:53.668Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_single_threaded_test.h:549:22:
error: member access into incomplete type "SynchronousEPEngine"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/12865/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/13718/ : FAILURE

Compile error at [2021-09-08T15:43:35.382Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_single_threaded_test.h:549:22:
error: invalid use of incomplete type ?class SynchronousEPEngine?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/13718/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/14427/ : FAILURE

Compile error at [2021-09-08T15:49:21.991Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_single_threaded_test.h:549:22:
error: member access into incomplete type "SynchronousEPEngine"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/14427/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/13958/ : FAILURE

Compile error at [2021-09-08T15:46:42.073Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_single_threaded_test.h:549:22:
error: invalid use of incomplete type ?class SynchronousEPEngine?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/13958/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/33689/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/10897/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
